--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jalali-moment": "^3.3.10",
     "mongoose": "^5.11.18",
     "mssql": "^6.3.1",
     "soap": "^0.36.0"
