--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mssql": "^6.0.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jalali-moment": "^3.3.10",
     "mongoose": "^5.11.18",
     "mssql": "^6.3.1",
-    "soap": "^0.36.0"
+    "soap": "^0.36.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
