--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/mssql": "^6.0.7",
+    "axios": "^0.21.1",
+    "circular-json": "^0.5.9",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fast-xml-parser": "^3.18.0",
     "jalali-moment": "^3.3.10",
     "mongoose": "^5.11.18",
     "mssql": "^6.3.1",
+    "node-fetch": "^2.6.1",
     "soap": "^0.36.0",
     "xml2js": "^0.4.23"
   },
