--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "nodemonConfig": {
+    "ignore": [
+      "test/*",
+      "docs/*",
+      "conf.json",
+      "**/.history"
+    ]
+  },
   "scripts": {
     "build": "npx tsc",
     "prestart": "npm run build",
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -27,8 +36,12 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.28",
+    "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.12",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^15.12.2",
+    "@types/soap": "^0.21.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
