--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "npx tsc",
     "prestart": "npm run build",
     "start": "node ./dist/app.js",
+    "service": "node ./dist/service.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.ts"
   },
@@ -41,7 +42,9 @@
     "@types/express": "^4.17.12",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^15.12.2",
+    "@types/node-windows": "^0.1.0",
     "@types/soap": "^0.21.0",
+    "node-windows": "^1.0.0-beta.5",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
