feat added .env added samanInsert request

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-KOOK_USERNAME="keshtvasanat_ekson_user"
-KOOK_PASSWORD="VWT9f"
-KOOK_CHANNEL="keshtvasanat_ekson_ch"
-KOOK_SECRET_KEY="pS24PTsd8n"
+KOOK_USERNAME=keshtvasanat_ekson_user
+KOOK_PASSWORD=VWT9f
+KOOK_CHANNEL=keshtvasanat_ekson_ch
+KOOK_SECRET_KEY=pS24PTsd8n
