--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "nodemonConfig": {
     "ignore": [
       "test/*",
@@ -23,7 +24,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/mssql": "^6.0.7",
     "axios": "^0.21.1",
     "circular-json": "^0.5.9",
     "cors": "^2.8.5",
@@ -44,9 +44,11 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/mongoose": "^5.11.97",
+    "@types/mssql": "^8.1.2",
     "@types/node": "^15.12.2",
     "@types/node-windows": "^0.1.0",
     "@types/soap": "^0.21.0",
+    "@types/xml2js": "^0.4.11",
     "node-windows": "^1.0.0-beta.5",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
