--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "nodemonConfig": {
     "ignore": [
       "test/*",
@@ -16,8 +16,6 @@
     "build": "npx tsc",
     "prestart": "npm run build",
     "start": "node ./dist/app.js",
-    "service": "node ./dist/service.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.ts"
   },
   "keywords": [],
